--- a/ecommerce/template/SignUp.html
+++ b/ecommerce/template/SignUp.html
@@ -1,10 +1,51 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block contents %}
-<h1>Sign Up</h1>
-<form method="POST">
-{{form | crispy }}
-<button type="submit">Submit</button>
-</form>
-{% endblock %}
+{% block title %}
+Create a new account
+{% endblock title %}
+{% block content %} 
+<div>
+    {% if not form.is_valid %}
+    <div class="mx-auto">
+        <br>
+        <h1 class="product_title text-center">
+        Create a new account
+        </h1>
+    </div>
+    <div class="col-9 col-sm-9 col-md-6 col-lg-5 mx-auto bg-light">
+        <br>
+        <p>Enter the following information to create a new account</p>
+        <form method="POST">
+            {% csrf_token %}
+            <p>{{form | crispy }}</p>
+            <button type="submit" name="button" class="btn btn-secondary">
+                Sign Up
+            </button>
+        </form>
+        <br>
+    </div>
+</div>
+{% else %}
+<div class="mx-auto">
+    <br>
+    <h1 class="product_title text-center">
+    Your account has been successfully created
+    </h1>   
+    <br>
+    <div class="container">
+        <p>Dear Customer,
+            <br>
+            <br>
+            Your account has been created and it is ready to use.
+            <br>
+            <a href="{% url 'signin' %}">
+                Continue shopping
+            </a> and enjoy the variety of products 
+        </p>
+    </div>
+</div>
+{% endif %}
+
+
+{% endblock content %}
