--- a/ecommerce/template/signin.html
+++ b/ecommerce/template/signin.html
@@ -4,7 +4,7 @@
 {% block title %}
 Sign In
 {% endblock title %}
-{% block content %} 
+{% block contents %} 
 <div class="container">
     <br>
     <h1 class="product_title text-center">
