--- a/ecommerce/template/home.html
+++ b/ecommerce/template/home.html
@@ -9,4 +9,38 @@ Home
     <img src="{% static 'images/home1.jpeg' %}" style="width: 100%; height: 150px;">
 
 </div>
+<div class="py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-10 mx-auto my-2 text-center">
+                <h1 class="text-uppercase font-weight-bold">
+                All products
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        
+        <div class="col-9 mx-auto col-md-6 col-lg-3">
+            <div class="card mb-5" style="border-color:transparent;">
+                <div class="p-4">
+                    <a href="">
+                    <img  width="375" height="400" src="" class="card-img-top"  alt="">
+                    </a>
+                </div>
+                
+                <div class="card-footer d-flex justify-content-between"
+                    style="background:transparent; border-color:transparent;">
+                    <p class="font-weight-bold mb-0">
+                       
+                    </p>
+                    <h5 class="text-info font-italic mb-0"></h5>
+                </div>
+            </div>
+        </div>
+       
+    </div>
+</div>
 {% endblock %}
