--- a/ecommerce/template/navbar.html
+++ b/ecommerce/template/navbar.html
@@ -23,14 +23,14 @@
         {% if request.user.is_authenticated %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+           Categories
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+            <a class="dropdown-item" href="{% url 'home' %}">All Products</a>
+            {% for category in links %}
+           <a class="dropdown-item" href="{{category.get_url}}">{{category.name}}</a>
+            {% endfor %}
+         </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">LogOut &nbsp;&nbsp;</a>
