--- a/ecommerce/template/home.html
+++ b/ecommerce/template/home.html
@@ -27,7 +27,7 @@ Home
             <div class="card mb-5" style="border-color:transparent;">
                 <div class="p-4">
 
-                    <a href="">
+                    <a href="{{product.get_url}}">
                     <img  width="375" height="400" src="{{product.image.url}}" class="card-img-top"  alt="">
                     </a>
                 </div>
