--- a/ecommerce/template/cart.html
+++ b/ecommerce/template/cart.html
@@ -3,7 +3,7 @@
 {% block title %}
 CART
 {% endblock title %}
-{% block content %}
+{% block contents %}
 {% if not cart_items %}
 <div class="text-center">
     <br>
@@ -56,13 +56,13 @@ CART
             
             <td>
                 &nbsp;<a href="{% url 'add_cart' cart_item.product.id %}"><i class="fa fa-plus cart_icon"></i></a>
-                &nbsp;<a href="{% url 'cart_remove' cart_item.product.id %}"><i class="fa fa-minus cart_icon"></i></a>
-                &nbsp;<a href="{% url 'cart_remove_product' cart_item.product.id %}"><i class="fa fa-trash cart_icon"></i></a>
+                &nbsp;<a href="{% url 'minus_cart' cart_item.product.id %}"><i class="fa fa-minus cart_icon"></i></a>
+                &nbsp;<a href="{% url 'delete_cart' cart_item.product.id %}"><i class="fa fa-trash cart_icon"></i></a>
             </td>
             {% else %}
             <td>
-                &nbsp;<a href="{% url 'cart_remove' cart_item.product.id %}"><i class="fa fa-minus cart_icon"></i></a>
-                &nbsp;<a href="{% url 'cart_remove_product' cart_item.product.id %}"><i class="fa fa-trash cart_icon"></i></a>
+                &nbsp;<a href=""><i class="fa fa-minus cart_icon"></i></a>
+                &nbsp;<a href=""><i class="fa fa-trash cart_icon"></i></a>
                 
             </td>
             {% endif %}
@@ -92,8 +92,13 @@ CART
             </tr>
         </tbody>
     </table>
+    <div id="paypal-button-container"></div>
+
+
     <div class="mx-auto">
         
+           
+          <br>
         <a href="{% url 'home' %}" style="text-decoration: none;">
         <button  type="button" class="btn btn-lg btn-block bg-dark text-white">
         Continue Shopping
@@ -101,4 +106,56 @@ CART
     </div>
 </div>
 {% endif %}
-{% endblock content %}
+<script>
+    // using jQuery
+function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie != '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = jQuery.trim(cookies[i]);
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+
+    
+    // Render the PayPal button into #paypal-button-container
+    paypal.Buttons({
+
+        // Call your server to set up the transaction
+        createOrder: function(data, actions) {
+            return actions.order.create({
+                purchase_units:[{
+                    value:'99.56'
+                    }]
+                });
+             },
+
+        // Call your server to finalize the transaction
+        onApprove: function(data, actions) {
+            return actions.order.capture().then(function(Object){
+
+                console.log(Object)
+                   
+                // Successful capture! For demo purposes:
+               
+                var transaction=Object.purchase_units[0].payments.captures[0];
+               
+                // Replace the above to show a success message within this page, e.g.
+                const element = document.getElementById('paypal-button-container');
+                element.innerHTML = '';
+                element.innerHTML = '<h4 class="text-center"><i class="fa fa-spinner fa-spin"></i>Please wait.....</h4>';
+                // Or go to another URL:  actions.redirect('thank_you.html');
+            });
+        }
+
+    }).render('#paypal-button-container');
+    
+</script>
+{% endblock contents %}
