--- a/ecommerce/template/productpage.html
+++ b/ecommerce/template/productpage.html
@@ -8,7 +8,7 @@ Product
 
 
 
-{% block content %} 
+{% block contents %} 
 <div class="container py-5">
     <div class="row mt-5">
         <div class="col-10 mx-auto col-md-6 my-3">
