--- a/ecommerce/template/navbar.html
+++ b/ecommerce/template/navbar.html
@@ -35,11 +35,18 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">LogOut &nbsp;&nbsp;</a>
         </li>
-        <li class="nav-item">
-          <i class="fa fa-solid fa-user-circle" style='font-size:36px;'></i>
-          Welcome,{{request.user}}
-            
-        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa fa-solid fa-user-circle" style='font-size:36px;'></i>
+            Welcome,{{request.user}}</a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><a class="dropdown-item" href="{% url 'change_password' %}">Change Password</a></li>
+              
+            </ul>
+              
+          </li>
+          
+          
         {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
